@@ -4,7 +4,7 @@
  *
  * This file contains functionality which implements the OService MODE command.
  *
- * $Id: mode.c 2559 2005-10-04 06:56:29Z nenolod $
+ * $Id: mode.c 2747 2005-10-07 18:18:19Z alambert $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"operserv/mode", FALSE, _modinit, _moddeinit,
-	"$Id: mode.c 2559 2005-10-04 06:56:29Z nenolod $",
+	"$Id: mode.c 2747 2005-10-07 18:18:19Z alambert $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -57,7 +57,7 @@ static void os_cmd_mode(char *origin)
 	c = channel_find(channel);
 	if (!c)
 	{
-                notice(opersvs.nick, origin, "Channel \002%s\002 does not exist.");
+                notice(opersvs.nick, origin, "Channel \002%s\002 does not exist.", channel);
                 return;
 	}
 
