@@ -1,3 +1,11 @@
+nenolod     2005/10/07 03:45:59 UTC	(20051007-2745)
+  Log:
+  glibc sucks.
+
+  Changes:	Modified:
+  +1 -1		trunk/src/function.c (File Modified) 
+
+
 kog         2005/10/07 01:43:55 UTC	(20051007-2743)
   Log:
   notify hook now uses notice, not myuser_notice
